--- a/templates/views/resources.hbs
+++ b/templates/views/resources.hbs
@@ -24,7 +24,7 @@
                 <a href='https://nodejs.org/en/'> <img src='/img/node.jpg' class='nodejs-logo'> </a>
             </div>
             <div class="column">
-                <a href='https://github.com/deepsd13'> <img src='/img/github.png' class='github-logo'> </a>
+                <a href='https://github.com/deepsd13/Blizzard-Cloud'> <img src='/img/github.png' class='github-logo'> </a>
             </div>
             <div class="column">
                 <a href='https://www.linkedin.com/in/shah-deep/'> <img src='/img/linkedin.png'
